# lsif-python-tmp

./: .gitignore  README.rst  pyproject.toml
src/lsif/: __init__.py  __main__.py  padawan.py  types.py
tests/: test_lsif.py  test_nodes.py  test_simple_project.py
tests/examples/beta_two_files/: first.py  second.py
tests/examples/jupyter_explore/: has_definition.py  test_notebook.ipynb
tests/examples/lsif_spec_definition/: __init__.py
tests/examples/simple/: __init__.py
tests/examples/two_files/: a.py  b.py
